2008-07-25  Srinivasa Ragavan  <sragavan@novell.com>

	* mail/em-folder-browser.c: Make show unread/etc work well.

2008-07-24  Sankar P  <psankar@novell.com>

	* em-folder-browser.c (get_view_query):
	Search by Labels.

2008-07-24  Srinivasa Ragavan  <sragavan@novell.com>

	* mail/em-folder-browser.c: Revert Sankar's search hacks.

2008-07-22  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #544022

	* e-searching-tokenizer.c: (dump_trie):
	Define function only when required. (Compiler warning cleanup.)

2008-07-21  Tor Lillqvist  <tml@novell.com>

	* em-migrate.c: Rearrange G_OS_WIN32 ifdefs a bit, as we need to
	compile more of this file to support upgrade attempts from 2.12
	and later.
	(migrate_folders): Guard against camel_store_get_folder()
	returning NULL, which happened at least for me. It was for a
	partially broken GroupWise folder structure on disk, so that is a
	case of garbage in--garbage out I guess, but it can't hurt to be
	careful...

2008-07-21  Bharath Acharya  <abharath@novell.com>

	Fixed some compiler warnings for Templates specific hunk.

	* em-composer-utils.c: (edit_message):

2008-07-20  Bharath Acharya  <abharath@novell.com>

	** Fix for bug #200147
	Added basic Template support

	* em-composer-utils.c (edit_message), (em_utils_edit_message): Modified 
	to suit it better for plugins to use it. And added support for template 
	placeholders to be replaced in the messages.
	* em-composer-utils.h:
	* em-folder-tree.c (is_special_local_folder):
	* em-folder-utils.c (emfu_is_special_local_folder):
	* em-folder-view.c (em_folder_view_open_selected):
	* em-utils.c (em_utils_folder_is_templates):
	* em-utils.h:
	* mail-component.c:
	* mail-component.h:

2008-07-16  Sankar P  <psankar@novell.com>

	Pushing disk summary changes from the madagascar branch

	* em-folder-browser.c (get_view_query):
	* em-folder-view.c (emfv_enable_menus):
	* mail-ops.c (refresh_folder_exec):
	* message-list.c (regen_list_exec):
